crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__constructor__return_value.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/return_value.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Initializer cannot return a value.
   ╭─[craftinginterpreters/test/constructor/return_value.lox:3:5]
   │
 3 │     return "result"; // Error at 'return': Can't return a value from an initializer.
   │     ───┬── ────┬───  
   │        │       ╰───── Help: remove this expression
   │        │             
   │        ╰───────────── cannot return a value
───╯
